# www.pycolore.fr

./: .doit.db  .env  .gitattributes  .gitignore  .gitmodules  Makefile  Pipfile  README.md  conf.py  pyproject.toml
.forestry/: settings.yml
.github/workflows/: pythonapp.yml
Redirection orange vers pycolore/: .index.html.un~  index.html  index.html~
files/: .htpasswd  robots.txt
files/admin/: config.yml  index.html
nikola/: .doit.db  .doit.db.dir  .env  .gitignore  Makefile  conf.py  conf.py~
nikola/output/: archive.html  index.html  index.src.html  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
nikola/pages/: fichiers.md  fichiers.md~  index.html  recettes.md
nikola/posts/: activer-les-depots-essentiels-sur-fedora-rpm-fusion-et-unitedrpm.md  bienvenue.md  changer-le-message-de-connexion-ssh.md  utiliser-bash-sous-windows.md  (+3 more)
output/: index.html
pages/: depot-apt-de-pycolore.md  depot-dnf-de-pycolore.md  fichiers.md  index.html  portfolio.html
posts/: activer-les-depots-essentiels-sur-fedora-rpm-fusion-et-unitedrpm.md  bienvenue.md  changer-le-message-de-connexion-ssh.md  gitkraken-dans-le-depot-apt-pycolore-pour-debian-9-linux-min-19-et-ubuntu-1804.md  gitkraken-en-rpm-pour-fedora-sur-le-depot-dnf-de-pycolore.md  indiquer-a-git-la-cle-ssh-a-utiliser-pour-les-operations-avec-les-depots-distants.md  installer-linux-a-cote-de-windows-dual-boot.md  installer-un-serveur-web-sur-windows-sans-wamp.md  projet-convertisseur-latex-vers-html-et-css.md  simple-dnf-outil-graphique-pour-dnf.md  utiliser-bash-sous-windows.md
pycolore/: manage.py
(+124 files in other folders)
