[tool.poetry]
name = "pycolore.fr"
version = "0.1.0"
description = ""
authors = ["Arkelis <guillaume.fayard@pycolore.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
nikola = "*"
pygments = "*"
pygments-style-solarized = "*"
"ruamel.yaml" = "^0.15.97"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
