[tool.poetry]
name = "pycolore.fr"
version = "0.1.0"
description = ""
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
nikola = "*"
pygments = "*"
pygments-style-solarized = "*"
"ruamel.yaml" = "^0.15.97"
jinja2 = "^2.10"
watchdog = "^0.9.0"
aiohttp = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
